# tg-tail

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
docs/: TODO.md
docs/adr/: 0001-user-mode-telethon.md  0002-realtime-low-fidelity-capture.md  0003-hybrid-typed-columns-and-jsonb.md  0004-db-state-machine-for-media-downloads.md  0005-minio-on-railway-for-media.md  0006-string-session-via-env.md  0007-migrations-in-entrypoint.md  0008-path-style-s3-addressing.md  README.md
scripts/: login.py
src/tg_tail/: app.py  config.py  logging.py
src/tg_tail/db/: engine.py  models.py  repository.py
src/tg_tail/media/: downloader.py  s3.py
src/tg_tail/tg/: client.py  listener.py  parser.py
tests/: test_alembic_migration.py  test_parser.py
