[project]
name = "tg-tail"
version = "0.1.0"
description = "tail -f for Telegram channels — archives posts to PostgreSQL via a user account"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "telethon>=1.36",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "aioboto3>=13.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tg_tail"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "SIM",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src/tg_tail", "tests"]

[[tool.mypy.overrides]]
module = ["telethon.*", "aioboto3.*", "aiobotocore.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
